[package]
name = "my-rust-homeworks"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"



[[bin]]
name = "hw03"
path = "src/hw03.rs"

[[bin]]
name = "hw05"
path = "src/hw05.rs"

[[bin]]
name = "hw08"
path = "src/hw08.rs"

[[bin]]
name = "hw10"
path = "src/hw10.rs"

[[bin]]
name = "hw11"
path = "src/hw11.rs"

[[bin]]
name = "hw12"
path = "src/hw12.rs"

[[bin]]
name = "hw13"
path = "src/hw13.rs"

[[bin]]
name = "hw14"
path = "src/hw14.rs"

[[bin]]
name = "hw15"
path = "src/hw15.rs"